# small_matrix

./: .gitignore  Cargo.toml  parse_crit.py
benches/: bench_create.rs  bench_mat.rs
myplots/: mul_times.1.txt  mul_times.2.txt  mul_times.3.txt  mul_times.4.txt  mul_times.6.txt  mul_times.7.txt  mul_times.txt
src/: alternative.rs  faer.rs  lib.rs  main.rs  matmul.rs  ndarray.rs  num_complex.rs  rust_array.rs
src/gates/: mod.rs
tests/: mat_mult_test.rs
