[package]
name = "small_matrix_rust"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# [profile.release]
# strip = "debuginfo"

# [build]
# rustflags = ["-C", "target-cpu=native"]

[dependencies]
num-complex = "0.4.6"
num-traits = "0.2.19"
ndarray-rand = "0.14"
faer = "0.18.2"
faer-entity = "0.18.0"

[dependencies.faer-ext]
version = "0.1.0"
features = ["ndarray"]

[dependencies.ndarray]
version = "^0.15.6"
features = ["rayon", "approx-0_5"]

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }

[[bench]]
name = "bench_mat"
harness = false

# name = "bench_create"



